Bug 157738 - Buttons don't do anything when clicked if Font Size widget is first in the overflow (gtk3)
Summary: Buttons don't do anything when clicked if Font Size widget is first in the ov...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:26.2.0 target:25.8.0.0.beta2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: GTK3 Toolbars-Overflow
  Show dependency treegraph
 
Reported: 2023-10-13 05:56 UTC by joey.joey586
Modified: 2025-07-02 06:58 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
screen recording of the bug (2.05 MB, video/x-matroska)
2023-10-14 03:06 UTC, joey.joey586
Details

Note You need to log in before you can comment on or make changes to this bug.
Description joey.joey586 2023-10-13 05:56:52 UTC
Description:
Icons that don't fit within the toolbar (indicated by ">>" on the top-right) does not do anything when clicked.

So far, I observed it happening only in Writer.

Steps to Reproduce:
1. Change UI to "Single Toolbar" (View > User Interface > Single Toolbar)
2. Resize window so that not all icons fit in toolbar
3. Click the ">>" button in the top right to reveal icons that don't fit
4. Click on any icon inside the ">>" menu
5. Whatever icon clicked does not take effect

Actual Results:
Clicking on an icon inside the ">>" menu should take effect. In this case, it does not.
Example: let's say the bold icon is inside the ">>" menu, but when clicked, text does not turn bold

Expected Results:
Clicking icons inside the ">>" menu should have worked.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 7.6.2.1 (X86_64) / LibreOffice Community
Build ID: 60(Build:1)
CPU threads: 2; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-US (C.UTF-8); UI: en-US
7.6.2-3
Calc: threaded
Comment 1 m_a_riosv 2023-10-13 22:36:13 UTC
Works for me
Version: 7.6.1.2 (X86_64) / LibreOffice Community
Build ID: f5defcebd022c5bc36bbb79be232cb6926d8f674
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded

Maybe you have more than one toolbar on the same line.
Comment 2 joey.joey586 2023-10-14 02:46:42 UTC
Weird. Seems to only be happening on my system, even when running LO with a clean home folder. And if someone asks, yes, it does happen with the LibreOffice Appimage.

Can someone on Linux with Xfce desktop please test? Seems to only happen on Xfce. I'm using Arch Linux with Xfce.
Comment 3 joey.joey586 2023-10-14 03:06:26 UTC
Created attachment 190201 [details]
screen recording of the bug

I'm able to apply formatting if the icon has an extra menu, like the highlighting option.
Comment 4 QA Administrators 2023-10-14 03:17:13 UTC Comment hidden (obsolete)
Comment 5 Kira Tubo 2023-10-17 07:07:49 UTC
Updating OS to Linux, as not currently reproducible in Windows. 

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 1ec2e39cf4d5fe0a592bc783fd8bcdc4345c8cbd
CPU threads: 6; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 6 Buovjaga 2023-10-27 13:40:48 UTC
Works fine here. Desktop is KDE.

Version: 7.6.3.0.0+ (X86_64) / LibreOffice Community
Build ID: 8275b70aae25f48817747bdfbfcfcaf1197c550c
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded

Arch Linux 64-bit, X11
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ae9c207675f1144fdea8f628f370375768f1eb00
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 27 October 2023
Comment 7 stragu 2023-10-27 14:31:23 UTC
Reproducibility depends on what the first control is in the overflow.

Consistent for me:
1. Use gtk3 VCL plugin.
2. Hide up to and including the "Font size", then test Bold or alignment buttons.

This is the same with the standard toolbar, and can be reproduce in other components like Calc.
If you tab the focus out of the Font Size widget, buttons will work.

Reproduced since 7.1 up to recent trunk build:

Version: 7.1.0.3 / LibreOffice Community
Build ID: f6099ecf3d29644b5008cc8f48f42f4a40986e4c
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: fd69b546ad36452560cb11ccb28e78632d65f045
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Bibisected with linux-64-7.1 bibisect repo to first bad commit 9603de4cb76fa3e1d4147d9a4a14696d0bc79e74 which points to core commit:

commit bed1bd821384f00ee02ec80594ee0fc4c5f15abe
author	Caolán McNamara <caolanm@redhat.com>	Thu Jun 11 15:04:31 2020 +0100
committer	Caolán McNamara <caolanm@redhat.com>	Thu Jun 11 20:30:58 2020 +0200
allow tabbing between native widgets in floating windows
i.e. in the calc autofilter menu-alike popups
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/96127

Caolán, can you please have a look?
Comment 8 Caolán McNamara 2025-06-29 20:45:45 UTC
This is a tricky focus related issue with floating windows, toolbars and a widget inside a toolbar.
Comment 9 Commit Notification 2025-06-29 22:21:06 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/31ba0aa5968525deb9b3f7164b34ada495b13d6d

Resolves: tdf#157738 don't break mouse capture by grabbing focus

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2025-06-29 22:22:09 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bc58a54d513702bc07906627dce073f05d7978fd

Related: tdf#157738 use InterimItemWindow::GetFocus

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2025-07-01 07:09:28 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/9774e2c75c3601ac2bd9bcd5f9eb85097e99645d

Resolves: tdf#157738 don't break mouse capture by grabbing focus

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2025-07-02 06:58:53 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/60146b4fe77013b044ae6a0a95a3a96e774da11c

Related: tdf#157738 use InterimItemWindow::GetFocus

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.