Related: tdf#157738 use InterimItemWindow::GetFocus

reuse the common Focus impl by enabling InitControlBase

Change-Id: Ia281db9c685e25de268ebdfd35e095012e5fcfb8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187158
Tested-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187171
Tested-by: Jenkins